# AiraCare

./: .gitignore  FRICTION-LOG.md  README.md
dashboard/: README.md  config.cosmos.yaml  pyproject.toml
dashboard/airacare_dashboard/: __init__.py  analytics.py  config.py  contracts.py  data.py  seed.py  server.py  stores.py
dashboard/airacare_dashboard/static/: app.css
dashboard/tests/: test_dashboard.py
edge/: README.md  config.yaml  pyproject.toml
edge/airacare_edge/: __init__.py  agent.py  cli.py  config.py  main.py
edge/airacare_edge/cloud/: __init__.py  a2a_client.py  a2a_stub.py  contracts.py  factory.py  foundry_client.py  queue.py  reporter.py  stub.py
edge/airacare_edge/privacy/: __init__.py  scrub.py
edge/airacare_edge/reasoning/: __init__.py  baseline.py  classifier.py  escalation.py  grader.py
edge/airacare_edge/sensors/: __init__.py  events.py  simulator.py
edge/airacare_edge/ui/: __init__.py  panel.py
edge/airacare_edge/voice/: __init__.py  asr.py  llm.py  mic_check.py  nlu.py  service.py  tts.py  vad.py
edge/tests/: test_a2a_roundtrip.py  test_agent_store_and_forward.py  test_clarify_loop.py  test_cloud_token.py  test_foundry_client.py  test_interpret_provenance.py  test_llm_interpreter.py  test_offline_queue.py  test_policy_piggyback.py  test_privacy_scrub.py  test_ui_panel.py  test_voice_pipeline.py  test_wander_flow.py
foundry/: .dockerignore  Dockerfile  README.md  config.aca.yaml  config.container.yaml  config.yaml  pyproject.toml
foundry-a2a-server/: .dockerignore  README.md  config.aca.yaml  config.yaml  pyproject.toml
foundry-a2a-server/airacare_foundry/: __init__.py  a2a_server.py  config.py  contracts.py  orchestrator.py
foundry-a2a-server/airacare_foundry/agents/: agent_framework.py  briefing.py  deliberate.py  escalation.py  hosted_agent.py  knowledge.py  policy_learning.py
foundry-a2a-server/airacare_foundry/assess/: policy.py
foundry-a2a-server/airacare_foundry/dashboard/: __init__.py  data.py  server.py
foundry-a2a-server/airacare_foundry/dashboard/static/: app.js  index.html
foundry-a2a-server/airacare_foundry/store/: __init__.py  base.py  cosmos.py  local.py
foundry-a2a-server/airacare_foundry/tools/: demo_seed.py  escalation_timer.py  powerbi_export.py
foundry-a2a-server/docs/: production.md
foundry-a2a-server/infra/: cosmos.bicep  deploy-foundry.ps1  deploy.ps1
foundry-a2a-server/powerbi/: README.md  generate.py  sample_events.csv
foundry-a2a-server/tests/: conftest.py  test_a2a_server.py  test_agent_framework.py  test_briefing.py  test_cosmos_integration.py  test_cosmos_store.py  test_dashboard.py  test_deliberate_async.py  test_escalation.py  test_hosted_agent.py  test_knowledge.py  test_orchestrator.py  test_policy.py  test_policy_learning.py  test_report_parity.py  test_store.py
foundry-hosted-agent/: .gitignore  README.md  azure.yaml  pyproject.toml
foundry-hosted-agent/infra/: provision_foundry_iq.py
foundry-hosted-agent/knowledge/: README.md
foundry-hosted-agent/knowledge/corpus/: communication-approach.md  escalation-emergency-signs.md  exit-seeking-elopement.md  falls.md  home-safety-prevention.md  medication-management.md  nighttime-wandering.md  sundowning-agitation.md
foundry-hosted-agent/src/airacare-care-orchestrator/: .env.example  eval.yaml  main.py  requirements.txt
foundry-hosted-agent/src/airacare-care-orchestrator/airacare_care/: __init__.py  assessor.py  contracts.py  escalation.py  escalation_timer.py  notify.py  render.py  state.py
foundry-hosted-agent/src/airacare-care-orchestrator/eval/: care-golden.jsonl  gen-instruction.md
foundry-hosted-agent/src/airacare-care-orchestrator/evaluators/airacare-rag-safety/: rubric_dimensions.json
foundry-hosted-agent/tests/: conftest.py  test_considered_assessor.py  test_escalation.py  test_render.py
foundry/airacare_foundry/: __init__.py  _console.py  a2a_server.py  config.py  orchestrator.py
foundry/airacare_foundry/agents/: __init__.py  agent_framework.py  cognitive_trend.py  deliberate.py
foundry/airacare_foundry/assess/: __init__.py  assessor.py
foundry/airacare_foundry/reflex/: __init__.py  grader.py  policy.py
foundry/airacare_foundry/store/: base.py  cosmos.py  local.py
foundry/airacare_foundry/tools/: __init__.py  demo_seed.py  notify.py  powerbi_export.py
foundry/docs/: production.md
foundry/infra/: cosmos.bicep  deploy-foundry.ps1  foundry.bicep
foundry/powerbi/: README.md
foundry/tests/: conftest.py  test_a2a_server.py  test_a2a_server_hardening.py  test_agent_framework.py  test_cognitive_trend.py  test_cosmos_store.py  test_event_store.py  test_grade_parity.py  test_orchestrator.py  test_personalization.py  test_phase5_wiring.py  test_powerbi_export.py  test_store.py
spec/: architecture.md  demo-runbook.md  demo-scenarios.md  demo-video.md  edge-design.md  foundry-a2a-hosting.md  foundry-design.md
spec/media/: README.md
spec/tools/: foundry_demo_feed.py
