[project]
name = "airacare-foundry"
version = "0.1.0"
description = "AiraCare Foundry Care Orchestrator — cloud-side graded reasoning (flagship: Nighttime Wandering)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Real multi-agent DELIBERATE tier (Monitoring / Companion / Cognitive-trend / Briefing).
# Stubbed in this scaffold; the extra pulls the Microsoft Agent Framework when wired.
agents = [
    "agent-framework>=0.1",
]
# Cosmos DB / Fabric backed PatientStateStore (placeholder in this scaffold).
cosmos = [
    "azure-cosmos>=4.7",
]
# Azure AI Search vector RAG for the Knowledge agent (LocalKnowledgeBase used otherwise).
search = [
    "azure-search-documents>=11.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["airacare_foundry"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
