[project]
name = "airacare-foundry"
version = "0.1.0"
description = "AiraCare Foundry Care Orchestrator — cloud-side graded reasoning (flagship: Nighttime Wandering)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Real multi-agent DELIBERATE tier (Risk-Reasoning / Knowledge / Escalation / Cognitive-trend /
# Briefing / Policy-Learning). Selected by deliberate.executor: agents; imported lazily so the
# local inline/thread paths never need the SDK (mirrors the cosmos discipline).
agents = [
    "agent-framework>=1.0",
]
# Cosmos DB / Fabric backed PatientStateStore. azure-identity enables AAD / Managed Identity
# auth (store.cosmos_auth: aad); the account-key path needs only azure-cosmos.
cosmos = [
    "azure-cosmos>=4.7",
    "azure-identity>=1.17",
]
# Azure AI Search vector RAG for the Knowledge agent (LocalKnowledgeBase used otherwise).
search = [
    "azure-search-documents>=11.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["airacare_foundry"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
